--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -6,5 +6,5 @@
 <%= text_field_tag :'student[last_name]'%><br>
 
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-<input type="submit" value="submit">
+<input type="submit" value="Submit Student">
 <% end%>
